Fixed font family names. Increased text contrast (made colors darker)

--- a/alternate-spec-style.css
+++ b/alternate-spec-style.css
@@ -1,7 +1,7 @@
 body {
-    font-family: 'DroidSerifRegular', 'Droid Serif', serif;
+    font-family: 'DroidSerif', 'Droid Serif', serif;
     font-size: 15px;
-    color: #2f2f2f;
+    color: #1f1f1f;
     line-height: 1.7em;
     padding-left: 8em;
 }
@@ -34,7 +34,7 @@ img[alt='W3C'] {
 }
 
 h1, h2, h3, h4, h5, h6 {
-    color: #4f4f4f;
+    color: #2f2f2f;
     font-weight: bold;
 }
 
@@ -59,7 +59,7 @@ h2, h3, h4, h5, h6 {
 }
 
 h1, h2, h3, h4, h5, h6, table, th, tr, td {
-    font-family: 'DroidSerifRegular', 'Droid Serif', serif;
+    font-family: 'DroidSerif', 'Droid Serif', serif;
 }
 
 h1+h2 {
@@ -105,8 +105,8 @@ pre {
 
 pre, code {
     font-family: 'DroidSansMonoRegular', 'Droid Sans Mono', Inconsolata, monospace;
-    font-size: 83%;
-    line-height: 1.4em;
+    font-size: 89%;
+    line-height: 1.45em;
 }
 
 code.xml, code.html, code.css {
